--- a/source/Xenia-dashboard/layouts/NXE-2008/language-select.html
+++ b/source/Xenia-dashboard/layouts/NXE-2008/language-select.html
@@ -482,5 +482,14 @@
         .is-rtl .nxe-settings-item.focused {
             transform: scale(1.03) translateX(-5px);
         }
+
+        html[dir="rtl"] .nxe-settings-wrapper{
+            
+            text-align: left !important;
+            direction: ltr !important;
+        }
+        .nxe-settings-menu{
+            display: block !important;
+        }
     </style>
 </section>
